# chatbot

./: .env.example  .gitignore  BUILD_SPEC.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
app/: __init__.py  config.py  main.py  metrics.py  models.py  observability.py
app/auth/: oidc.py  permissions.py
app/data/: db.py  embeddings.py  ingest.py  semantic_layer.py
app/eval/: dataset.py  harness.py
app/llm/: groq_client.py
app/masking/: interface.py  pii_detect.py  presidio_masker.py  structured.py  tokens.py  vault_redis.py
app/nodes/: audit.py  groundedness.py  guardrails_in.py  guardrails_out.py  mask.py  reidentify.py  retrieval_tool.py  route.py  sql_tool.py  synthesize.py
app/orchestrator/: graph.py
app/static/: index.html
db/: 001_extensions.sql  002_schema.sql  003_rls.sql  004_masking.sql  005_roles.sql
tests/: conftest.py  test_access_control.py  test_auth.py  test_chunking.py  test_dev_token.py  test_eval_harness.py  test_groundedness.py  test_guardrails.py  test_leakage.py  test_masking_roundtrip.py  test_metrics.py  test_no_raw_sensitive_in_prompt.py  test_orchestrator_graph.py  test_pii_masking.py  test_retrieval_access.py  test_routing.py  test_sql_validation.py
